--- a/public/assets/styles/water.css
+++ b/public/assets/styles/water.css
@@ -7,7 +7,7 @@
   --selection: #9e9e9e;
   --text-main: #363636;
   --links: #0076d1;
-  --focus: rgba(0, 150, 191, 0.67);
+  --focus: rgb(187, 134, 252);
   --border: #dbdbdb;
   --animation-duration: 0.1s;
   --button-hover: #ddd;
@@ -137,7 +137,7 @@ button:focus,
 input:focus,
 select:focus,
 textarea:focus {
-  box-shadow: 0 0 0 2px rgba(0, 150, 191, 0.67);
+  box-shadow: 0 0 0 2px var(--focus);
   box-shadow: 0 0 0 2px var(--focus);
 }
 button:disabled,
@@ -163,7 +163,6 @@ fieldset {
   border: 1px solid var(--focus);
   border-radius: 6px;
   margin: 0 0 12px;
-  padding: 10px;
 }
 legend {
   font-size: 0.9em;
@@ -255,7 +254,7 @@ table {
   border-collapse: collapse;
   margin-bottom: 10px;
   width: 100%;
-  table-layout: fixed;
+  table-layout: auto;
 }
 table caption,
 td,
