--- a/public/assets/styles/water.css
+++ b/public/assets/styles/water.css
@@ -5,7 +5,7 @@
   --background: #efefef;
   --background-alt: #f7f7f7;
   --selection: #9e9e9e;
-  --text-main: #363636;
+  --text-main: #3C3332;
   --links: #0076d1;
   --focus: rgb(187, 134, 252);
   --border: #dbdbdb;
@@ -28,7 +28,7 @@ body {
 	line-height: 1.4;
   word-wrap: break-word;
   color: var(--text-main);
-	background: var(--background-body);
+	background: #FEFBF7;
 	font-family: var(--body-font);
 	text-rendering: optimizeLegibility;
 	font-feature-settings: 'kern' 1, 'onum' 0, 'liga' 0, 'tnum' 1;
