--- a/docs/assets/styles/global.css
+++ b/docs/assets/styles/global.css
@@ -3,6 +3,7 @@
   --serif: "Tiempos Text Web", Georgia, Times, serif;
   --narrow: "National 2 Narrow Web", Helvetica, Arial, sans-serif;
   --mono: Menlo, Consolas, Monaco, "Courier New", monospace;
+  --display: "Monoton Regular", display;
 
   --z-bottom: -100;
   --z-middle: 0;
@@ -28,7 +29,10 @@
   --primary: var(--red);
   --secondary: var(--green);
 
-  --tan-light: #B2A072;
+  --jukebox-light-tan: #FEFBF7;
+  --jukebox-dark-tan: #BFB2A2;
+  --jukebox-brown: #3C3332;
+  --jukebox-red: #D24939;
 
   /* water.css */
 
@@ -85,10 +89,23 @@
 
 .autocomplete input {
   width: 100%;
-  background: #3C3332;
-  color: blue;
+  background: var(--jukebox-light-tan);
+  border: 1px solid var(--jukebox-dark-tan);
+  color: var(--jukebox-dark-tan);
 }
 
 .point-wrapper {
   cursor: pointer;
+}
+
+.namecard-inset {
+  background-color: #fff;
+}
+
+.header-shape svg {
+  width: 100%;
+}
+
+.juke-label .header-shape svg path {
+  stroke-width: 12px;
 }
